<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lesson 02</string>
    <string name="action_settings">Settings</string>
    <string name="lblAct01Name">Name:</string>
    <string name="btnAct01Social">Social Networking</string>
    <string name="btnAct01State">Select State</string>
    <string name="btnAct01Next">Next</string>
    <string name="chkbxAct01True">True Information</string>
    <string name="title_activity_social_network">Social Network</string>
    <string name="hello_world">Hello world!</string>
    <string name="rdbAct02Badoo">Badoo</string>
    <string name="rdbAct02Facebook">Facebook</string>
    <string name="rdbAct02Foursquare">Foursquare</string>
    <string name="rdbAct02Linkedin">Linkedin</string>
    <string name="rdbAct02Tweeter">Tweeter</string>
    <string name="btnAct02Select">Select</string>
    <string name="title_activity_state">States</string>
    <string name="title_activity_results">Results</string>
    <string name="lblAct04Name">"Name:  "</string>
    <string name="txtAct04Name">\@null</string>
    <string name="spaceAct04"></string>
    <string name="lblAct04Social">Social Network:</string>
    <string name="txtAct04Social">\@null</string>
    <string name="lblAct04State">"State:  "</string>
    <string name="trustYes">YES</string>
    <string name="trutNo">NO</string>
    <string name="txtAct04State">\@null</string>
    <string name="title_activity_social_net">Social Network</string>
    <string-array name="states">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arkansas</item>
        <item>Arizona</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kentucky</item>
        <item>Louisiania</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Minnesota</item>
        <item>Mississipi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Michigan</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New York</item>
        <item>New Jersey</item>
        <item>New México</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>North Carolina</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pensylvania</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>        
    </string-array>
        <string name="lblAct04TrustInfo">Trusted Info:</string>

</resources>
