<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svwAct1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="502dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/lblAct01Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="19dp"
            android:text="@string/lblAct01Name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/lblAct01Name"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edtName"
            android:layout_alignRight="@+id/edtName"
            android:layout_centerVertical="true"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnAct01Social"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/btnAct01Social" />

            <Button
                android:id="@+id/btnAct01State"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnAct01State" />

            <CheckBox
                android:id="@+id/chkbxAct01True"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="48dp"
                android:text="@string/chkbxAct01True"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAct01Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:minWidth="150dip"
            android:text="@string/btnAct01Next" />

    </RelativeLayout>

</ScrollView>
